force-app/main/default/objects/Product2/fields/Sym_Average_Monthly_Premium__c.field-meta.xml
<CustomField>
    <fullName>Sym_Average_Monthly_Premium__c</fullName>
    <label>Average Monthly Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>