force-app/main/default/objects/Product2/fields/Sym_Contact_Lens_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Sym_Contact_Lens_Benefit__c</fullName>
    <description>Symphony Vision</description>
    <label>Contact Lens Benefit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>