force-app/main/default/objects/Product2/fields/Sym_Diagnostic_Exam__c.field-meta.xml
<CustomField>
    <fullName>Sym_Diagnostic_Exam__c</fullName>
    <label>Diagnostic Exam</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>