force-app/main/default/objects/Product2/fields/Sym_Emergency_Room__c.field-meta.xml
<CustomField>
    <fullName>Sym_Emergency_Room__c</fullName>
    <label>Emergency Room</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>