force-app/main/default/objects/Product2/fields/Sym_Exam_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Sym_Exam_Frequency__c</fullName>
    <description>Symphony Vision</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Exam Frequency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>