force-app/main/default/objects/Product2/fields/Sym_Hospital_Admission__c.field-meta.xml
<CustomField>
    <fullName>Sym_Hospital_Admission__c</fullName>
    <label>Hospital Admission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>