force-app/main/default/objects/Product2/fields/Sym_Lens_Copay__c.field-meta.xml
<CustomField>
    <fullName>Sym_Lens_Copay__c</fullName>
    <description>Symphony Vision</description>
    <label>Lens Copay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>