force-app/main/default/objects/Product2/fields/Sym_Maximum_Out_Of_Pocket_Family__c.field-meta.xml
<CustomField>
    <fullName>Sym_Maximum_Out_Of_Pocket_Family__c</fullName>
    <label>Maximum Out of Pocket - Family</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>