force-app/main/default/objects/Product2/fields/Sym_Off_Visit_EPHC_Copay__c.field-meta.xml
<CustomField>
    <fullName>Sym_Off_Visit_EPHC_Copay__c</fullName>
    <label>Office Visit EPHC - Co Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>