force-app/main/default/objects/Product2/fields/Sym_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Sym_Plan_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>