force-app/main/default/objects/Product2/fields/Sym_Primary_Care_Copay__c.field-meta.xml
<CustomField>
    <fullName>Sym_Primary_Care_Copay__c</fullName>
    <description>E2E Symphony field for POC - Primary Care Copay field is an attribute of a plan</description>
    <label>Primary Care Copay</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>