force-app/main/default/objects/Product2/fields/Sym_Rx_Network__c.field-meta.xml
<CustomField>
    <fullName>Sym_Rx_Network__c</fullName>
    <description>E2E Symphony field for POC - Rx Network is an attribute of a plan</description>
    <label>Rx Network</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rx Choice Tiered with R90</fullName>
            </value>
            <value>
                <fullName>OH-LG-RX Ded/20%/30% Tiered</fullName>
            </value>
            <value>
                <fullName>OH-LG-RX Ded/0%/10% Tiered</fullName>
            </value>
            <value>
                <fullName>OH-LG-RX T6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>