force-app/main/default/objects/Product2/fields/Sym_Rx_Plan__c.field-meta.xml
<CustomField>
    <fullName>Sym_Rx_Plan__c</fullName>
    <description>E2E Symphony field for POC - Rx Plan is an attribute of a plan</description>
    <label>Rx Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4-Tier</fullName>
            </value>
            <value>
                <fullName>3-Tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>