force-app/main/default/objects/Product2/fields/Sym_ScoobyDoo__c.field-meta.xml
<CustomField>
    <fullName>Sym_ScoobyDoo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product Flag for POC - Used for Quick Search</description>
    <label>ScoobyDoo</label>
    <type>Checkbox</type>
</CustomField>