force-app/main/default/objects/Product2/fields/Sym_Symphony_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Sym_Symphony_Product_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Symphony Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>