force-app/main/default/objects/Product2/fields/Sym_Temp_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sym_Temp_Rate__c</fullName>
    <description>This is temporary to hold the rate for demo purposes.</description>
    <label>Temp Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>