force-app/main/default/objects/Product2/fields/Sym_Urgent_Care_CO_Pay__c.field-meta.xml
<CustomField>
    <fullName>Sym_Urgent_Care_CO_Pay__c</fullName>
    <label>Urgent Care - Co Pay</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>